--- a/ru/toc.yaml
+++ b/ru/toc.yaml
@@ -1,2 +1,7 @@
 title: Migs911 YFM test
 href: index.md
+items:
+  - name: Overview
+    href: index.md
+  - name: Quick Start
+    href: quickstart.md
